apply plugin: 'com.android.application'
apply plugin: 'kotlin-android'
apply plugin: 'kotlin-kapt'
apply plugin: 'kotlin-android-extensions'
apply plugin: 'de.undercouch.download'
apply plugin: 'com.google.android.gms.oss-licenses-plugin'

apply plugin: 'com.google.gms.google-services' // Google Services Gradle plugin
apply plugin: 'com.google.firebase.crashlytics'

// Download default models; if you wish to use your own models then
// place them in the "assets" directory and comment out this line.
apply from:'download_model.gradle'

android {
    ndkVersion "21.3.6528147"
    compileSdkVersion 30
    buildToolsVersion "29.0.3"
    defaultConfig {
        applicationId "ru.igla.tfprofiler"
        minSdkVersion 21
        targetSdkVersion 30
        versionCode 7
        versionName "0.95"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"

        //http://www.vision.caltech.edu/Image_Datasets/Caltech101/
        buildConfigField 'String', 'ASSET_IMG_DATASET', "\"image_datasets/BACKGROUND_Google\""


        buildConfigField 'String', "ASSET_MOBILENETV1_FILE", "\"$project.ext.mobilenetv1/\""
        buildConfigField 'String', "ASSET_MOBILENETV2_FILE", "\"$project.ext.mobilenetv2/$project.ext.mobilenetv2LocalFile\""
        buildConfigField 'String', "ASSET_YOLOV4_FILE", "\"$project.ext.yolov4/$project.ext.yolov4LocalFile\""
        buildConfigField 'String', "ASSET_BLAZEFACE_FILE", "\"$project.ext.blazefacefront/$project.ext.blazefaceFrontLocalFile\""
        buildConfigField 'String', "ASSET_LANDMARK_FILE", "\"$project.ext.facelandmark/$project.ext.faceLandmarkLocalFile\""

        ndk.abiFilters 'armeabi-v7a', 'arm64-v8a'

        javaCompileOptions {
            annotationProcessorOptions {
                arguments = ["room.schemaLocation": "$projectDir/schemas".toString(), "room.incremental":"true"]
            }
        }
    }

    def releasePropsFile = 'release_tfprofiler.properties'
    signingConfigs {
        if (rootProject.file(releasePropsFile).exists()) {
            def props = new Properties()
            props.load(new FileInputStream(rootProject.file(releasePropsFile)))
            release {
                storeFile rootProject.file(props.keyStore)
                storePassword props.storePassword
                keyAlias props.keyAlias
                keyPassword props.keyPassword
            }
        }
    }

    def localPropsFile = 'local.properties'
    def localProperties = new Properties()
    if (rootProject.file(localPropsFile).exists()) {
        localProperties.load(new FileInputStream(rootProject.file(localPropsFile)))
    }
    def debugMetricaKey = localProperties['apiMetricaDebugKey'] ?: "\"\""
    def releaseMetricaKey = localProperties['apiMetricaReleaseKey'] ?: "\"\""

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            if (rootProject.file(releasePropsFile).exists()) {
                signingConfig signingConfigs.release
            }
            buildConfigField 'String', 'METRICA_KEY', releaseMetricaKey
        }
        debug {
            debuggable true
            buildConfigField 'String', 'METRICA_KEY', debugMetricaKey
        }
    }
    aaptOptions {
        noCompress "tflite"
    }
    compileOptions {
        sourceCompatibility = '1.8'
        targetCompatibility = '1.8'
    }
    kotlinOptions {
        jvmTarget = JavaVersion.VERSION_1_8
        freeCompilerArgs = ["-Xinline-classes"]
    }
    lintOptions {
        // Allow lint to check dependencies
        checkDependencies true
        // Ignore any tests
        ignoreTestSources true

        abortOnError false
    }
    packagingOptions {
        exclude 'META-INF/LICENSE'
        exclude 'META-INF/LICENSE.txt'
        exclude 'META-INF/NOTICE'
        exclude 'META-INF/NOTICE.txt'
        exclude 'META-INF/MANIFEST.MF'
        exclude 'META-INF/DEPENDENCIES'
        exclude 'META-INF/LGPL2.1'
        exclude 'META-INF/proguard/androidx-annotations.pro'
        exclude 'META-INF/atomicfu.kotlin_module'
        exclude 'META-INF/core.kotlin_module'
    }
}

repositories {
    flatDir {
        dirs 'libs'
    }
}


def room_version = "2.3.0"
def coroutines_version='1.4.3'
def lifecycle_version='2.3.1'
def tensorflow = '2.5.0'

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])

    implementation platform('com.google.firebase:firebase-bom:26.0.0')
    // Add the dependency for the Firebase SDK for Google Analytics
    // When using the BoM, don't specify versions in Firebase dependencies
    implementation 'com.google.firebase:firebase-analytics-ktx'
    implementation 'com.google.firebase:firebase-crashlytics-ktx'

    implementation 'com.facebook.stetho:stetho:1.5.1'

    implementation "androidx.room:room-runtime:$room_version"
    kapt "androidx.room:room-compiler:$room_version"

    implementation 'com.yandex.android:mobmetricalib:3.18.0'

    implementation 'de.siegmar:fastcsv:1.0.3' //export csv

    //on Xiaomi A1 standard MediaMetadataRetriever not works (black or first duplicate frames), use other
    implementation 'org.jcodec:jcodec:0.2.5'
    implementation 'org.jcodec:jcodec-android:0.2.5'

    implementation 'androidx.appcompat:appcompat:1.2.0'
    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
    implementation 'com.google.android.material:material:1.2.1'
    implementation 'androidx.exifinterface:exifinterface:1.3.2'

    implementation 'io.apptik.widget:multislider:1.3'

    implementation 'androidx.core:core-ktx:1.3.2'
    testImplementation 'junit:junit:4.12'
    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'

    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"

    implementation 'org.tensorflow:tensorflow-lite-hexagon:0.0.0-nightly' //not available in stable channel
    implementation "org.tensorflow:tensorflow-lite:$tensorflow"
    implementation "org.tensorflow:tensorflow-lite-gpu:$tensorflow"
    implementation "org.tensorflow:tensorflow-lite-select-tf-ops:$tensorflow"
    implementation 'org.tensorflow:tensorflow-lite-support:0.1.0-rc1'
    implementation 'org.tensorflow:tensorflow-lite-metadata:0.1.0-rc2'

    implementation "androidx.browser:browser:1.3.0"
    implementation 'androidx.viewpager2:viewpager2:1.0.0'

    implementation 'androidx.fragment:fragment-ktx:1.3.3'


    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
    // ViewModel
    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
    // Lifecycles only (without ViewModel or LiveData)
    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
    // LiveData
    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"

    implementation 'com.afollestad.material-dialogs:bottomsheets:3.3.0'
    implementation 'com.afollestad.assent:core:3.0.0-RC4'

    // https://mvnrepository.com/artifact/org.apache.commons/commons-math3
    implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'

    implementation "com.google.android.gms:play-services-oss-licenses:17.0.0"
}